@@ -1,3 +1,7 @@
+2010-04-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/pack15.ad[sb]: New test.
+
 2010-04-25  Paolo Bonzini  <bonzini@gnu.org>
 
 	* gcc.target/arm/mla-1.c: New test.
